@@ -302,24 +302,60 @@ public class FollowVpsController {
                   traderIds = null;
                 }
                 //将subscribeIds和traderIds进行对比,相同的提取出来
-                List<Long> sameIds = subscribeIds.stream()
-                        .filter(traderIds::contains)
-                        .toList();
-                if (ObjectUtil.isEmpty(sameIds)){
+//                final List<Long> sameIds = new ArrayList<>();
+//                if (ObjectUtil.isEmpty(subscribeIds)) {
+//                    sameIds = subscribeIds.stream()
+//                            .filter(traderIds::contains)
+//                            .toList();
+//                }
+//                    if (ObjectUtil.isEmpty(sameIds)) {
+//                        continue;
+//                    }
+//                    //ABAC
+//                    if (ObjectUtil.isEmpty(list1.stream().filter(o -> sameIds.contains(o.getSlaveId())).collect(Collectors.toList()))) {
+//                        continue;
+//                    }
+//                    //查询在list1里sameIds等于MasterId或者等于slaveId
+//                    List<FollowTraderSubscribeEntity> list3 = list1.stream()
+//                            .filter(entity -> sameIds.contains(entity.getMasterId()) || sameIds.contains(entity.getSlaveId()))
+//                            .collect(Collectors.toList());
+//
+//                // 删除这些订阅关系
+//                if (ObjectUtil.isNotEmpty(list3)) {
+//
+//                    followTraderSubscribeService.removeByIds(list3.stream().map(FollowTraderSubscribeEntity::getId).toList());
+//                }
+                final List<Long> sameIds = new ArrayList<>();
+
+                if (ObjectUtil.isNotEmpty(subscribeIds) && ObjectUtil.isNotEmpty(traderIds)) {
+                    // 使用 Set 避免重复元素
+                    Set<Long> subscribeSet = new HashSet<>(subscribeIds);
+                    Set<Long> traderSet = new HashSet<>(traderIds);
+
+                    // 计算交集
+                    sameIds.addAll(traderSet.stream()
+                            .filter(subscribeSet::contains)
+                            .toList());
+                }
+
+                if (ObjectUtil.isEmpty(sameIds)) {
                     continue;
                 }
-                //ABAC
-                if (ObjectUtil.isEmpty(list1.stream().filter(o -> sameIds.contains(o.getSlaveId())).collect(Collectors.toList()))){
+
+                // ABAC 检查
+                if (ObjectUtil.isEmpty(list1.stream()
+                        .filter(o -> sameIds.contains(o.getSlaveId())) // sameIds 已声明为 final
+                        .collect(Collectors.toList()))) {
                     continue;
                 }
-                //查询在list1里sameIds等于MasterId或者等于slaveId
+
+                // 查询相关订阅关系
                 List<FollowTraderSubscribeEntity> list3 = list1.stream()
                         .filter(entity -> sameIds.contains(entity.getMasterId()) || sameIds.contains(entity.getSlaveId()))
                         .collect(Collectors.toList());
 
-                // 删除这些订阅关系
+                // 删除订阅关系
                 if (ObjectUtil.isNotEmpty(list3)) {
-
                     followTraderSubscribeService.removeByIds(list3.stream().map(FollowTraderSubscribeEntity::getId).toList());
                 }
             }
